[package]
name = "megafine"
version = "0.2.0"
default-run = "megafine"
edition = "2024"
rust-version = "1.95.0"
authors = ["Richard Beneyton <richard.beneyton@gmail.com>"]
# mandatory fields
license = "GPL-3.0-or-later"
description = "A multithreaded command-line benchmarking tool"
homepage = "https://github.com/rbeneyton/megafine"
repository = "https://github.com/rbeneyton/megafine"
readme = "README.md"
# optional fields
keywords = ["tuning", "benchmarking", "optimization", "multithreaded"]
categories = ["command-line-utilities", "development-tools::profiling", "concurrency"]

[[bin]]
name = "megafine-region-rs" # dummy --region example
path = "instrument/megafine-region-rs.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "wrap_help", "cargo"] }
clap_complete = "4"
colored = "3.1.1"
ctrlc = "3.5.2"
flume = "0.12.0"
libc = "0.2.186"
rustix = { version = "1.1.4", default-features = false, features = ["std", "event", "pipe", "process", "termios", "thread", "linux_5_11"] }
shell-words = "1.1.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
